# SSC

./: .firebaserc  .gitignore  .semgrepignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SSC-BUILD-APK.bat  SSC-BUILD-DESKTOP-MAC.sh  SSC-BUILD-DESKTOP-WIN.bat  SSC-BUILD-IOS.sh  THIRD_PARTY_NOTICES.md  VULNERABILITY_DISCLOSURE_POLICY.md  atlas-credentials.env.example  docker-compose.yml  firebase.json  google-services-web.json  google-services-web.json.example  production-secrets.env.example  status_incidents.json
.github/: STARTER_ISSUES.md  dependabot.yml  pull_request_template.md  ruleset-main.json
.zap/: rules.tsv
android/: README.md  build-log.txt  build.gradle.kts  compile-log.txt  keystore.properties.example  settings.gradle.kts  signing.env.example
app-store/: GRAPHICS_CHECKLIST.md  LISTING_COPY.md  PRIVACY_NUTRITION.json
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  check_ready.py  cloud_run.env.example  cloudrun-env.yaml  cloudrun-env.yaml.example  config.py  db.py  deps.py  lifespan.py  middleware.py  native_push.py  push.py  pytest.ini  requirements.txt  security.py  server.py  ws.py
desktop/: CMakeLists.txt  README.md
desktop/crypto-worker/: libsignalSession.js  package-lock.json  package.json  secureFileStore.js  worker.js
desktop/media-worker/: package-lock.json  package.json  sfuClient.js  sfuSdp.js  worker.js
desktop/qml/: ChatListPage.qml  ChatThreadPage.qml  LoginPage.qml  Main.qml  RecoveryPage.qml  SettingsPage.qml  Theme.qml
desktop/resources/: ssc.rc
desktop/src/: SscApiClient.cpp  SscApiClient.h  SscCallEngine.cpp  SscCallEngine.h  SscCryptoBridge.cpp  SscCryptoBridge.h  SscDeepLink.cpp  SscDeepLink.h  SscLocalCache.cpp  SscLocalCache.h  SscRealtime.cpp  SscRealtime.h  SscSession.cpp  SscSession.h  SscTurnstileHelper.cpp  SscTurnstileHelper.h  SscVoiceRecorder.cpp  SscVoiceRecorder.h  main.cpp
device-matrix/: MATRIX.md  RELEASE_CANDIDATE.json
docs/: ANDROID_LAN_DEBUG.md  ANDROID_MESSAGING_INVESTIGATION.md  BUILD_WINDOWS.md  CONTRIBUTING.md  DEEP_AUDIT_2026-07-19.md  DISASTER_RECOVERY.md  ELECTRON_RETIRED.md  FREE_DISTRIBUTION.md  KNOWN_ISSUES.md  LIVE_SFU_HARDEN.md  SECURITY.md  SECURITY_ROADMAP.md  WINDOWS_CLIENT.md
electron/: desktopNotify.js  electron-builder.yml  groupSenderKeySession.js  libsignalSession.js  main.js  package-lock.json  package.json  preload.js  pushTokenStore.js  secureFileStore.js  signalStoreBackup.js
frontend/: .depcheckrc.json  .env.example  .env.mobile.example  .env.production.example  .eslintrc.json  craco.config.js  knip.json  package.json
ios/: README.md
memory/: AGPL_COMPLIANCE.md  CLIENT_FOOTPRINT_CHARTER.md  DEPLOY_CHARTER.md  DESKTOP_CLIENT_CHARTER.md  E2E_INTEGRITY_CHARTER.md  ENGINE13_CHARTER.md  ENGINE14_CHARTER.md  ENGINE9_CHARTER.md  ENGINE_STATUS.md  FREE_SERVICES.md  INSTALLED_CLIENT_CHARTER.md  INTELLIGENCE_CHARTER.md  IOS_CAPACITOR_CHARTER.md  MESSAGING_CHARTER.md  METADATA_MINIMIZATION_CHARTER.md  NATIVE_ANDROID_PARITY.md  NATIVE_CLIENT_CHARTER.md  PLATFORM_RELEASE_CHARTER.md  PRD.md  PRODUCT_BLUEPRINT.md  RELEASE_v0.2.0_CHECKLIST.md  RELEASE_v0.3.0_CHECKLIST.md  RELEASE_v0.3.0_NOTES.md  RETENTION_CHARTER.md  ROADMAP.md  SECURITY_MODEL.md  SESSION_HARDENING_CHARTER.md  SFU_CHARTER.md  SFU_TURN_RUNBOOK.md  SIGNAL_CHARTER.md  SIGNAL_PROTOCOL_CHARTER.md  SSC-ROADMAP.md  UNIFIED_IDENTITY_CHARTER.md
play-store/: DATA_SAFETY.json  GRAPHICS_CHECKLIST.md  LISTING_COPY.md
scripts/: APP_STORE_SETUP.txt  ATLAS_NETWORK_HARDENING.md  CODE_SIGNING_SETUP.txt  DEVICE_MATRIX_SETUP.txt  GOOGLE_PLAY_SETUP.txt  PORKBUN_EMAIL_SETUP.txt  TASK_P_FOUNDER_STEPS.txt  _restore_cloudrun_env.py  apply_production_hardening.ps1  audit_ssc_inventory.py  build_android.ps1  build_android_native.ps1  build_desktop_signed_mac.sh  build_desktop_signed_win.ps1  build_desktop_windows.ps1  build_electron.ps1  build_electron_macos.ps1  build_electron_sac_compat.ps1  build_ios.sh  check_github_release_assets.ps1  close_completed_issues.ps1  close_issue_59.ps1  create_android_keystore.ps1  deploy_cloud_run.ps1  deploy_hosting.ps1  deploy_push_cloudrun.ps1  deploy_sfu_gce.ps1  deploy_sfu_tls.ps1  deploy_turn_gce.ps1  distribute_android.ps1  enable_app_store.ps1  enable_code_signing.ps1  enable_play_store.ps1  full_app_audit.ps1  harden_atlas_ip_access.py  harden_atlas_network.ps1  inspect_electron_ui.py  install_android_native.ps1  install_android_sideload.ps1  install_desktop_windows.ps1  (+36 more)
sfu-server/: Caddyfile  Dockerfile  README.md  (+8 more)
(+1161 files in other folders)
